# Matplot-Feynman-Diagram

./: .gitignore  FeynPlot GUI.spec  FeynPlot_GUI.spec  LICENSE  MANIFEST.in  README.md  README.zh.md  Update_Logs_and_Plans.md  __main__.spec  code_stats.md  debug_utils.py  feynplot_gui.pro  pyproject.toml  requirements.txt  run_gui.bat  run_gui.csh  run_gui.py  run_gui.sh  run_linux_mac.sh  run_windows.bat  setup.py  test.py  testasdsa.py  wrap_qt_strings.py
discardes_gui/: app.py  mainwindow.py
discardes_gui/controllers/: diagram_controller.py
discardes_gui/test/: test_gui.py  test_plt_gui.py
discardes_gui/widgets/: add_line_dialog.py  add_vertex_dialog.py  custom_graphics_items.py  property_panel.py
examples/: A Nice Plot.json  B_to_pip_pim.json  B_to_pip_pim_hollow_test.json  babaScattering.json  continuum_e+e-toomegaeta.json  e+e-toomegaeta.json  em_e+e-toomegatea.json  gamma_gg_e+e-toomegaeta.json  gluons_e+e-toomegaeta.json  temp.json  test_text.json  testtest.json
feynplot/: __init__.py
feynplot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
feynplot/core/: FeynmanDiagramExtended.py  WZ_methods.py  bezier.py  (+13 more)
feynplot_GUI/: FeynPlot.spec  py_file_list.txt
feynplot_GUI_BAK/: example.py
feynplot_gui/: __main__.py  debug_utils.py  find_strs.py
results/: babaScattering.json  untitled.json
startUI/: launcher.py  run_gui.bat
temp/: debug_utils.py  edit_line_dialog.py  edit_vertex_dialog.py  temp.txt  test.py  test2.py  test3.py
test_dir/: test_beisel.py  test_gluon.py  test_heli.py  test_heli_static.py  test_line_gluon.py
(+163 files in other folders)
